<resources>
    <string name="app_name">My Quiz App</string>
    <string name="name">Name</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="quiz_app">Quiz app!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter Your Name</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="congratulations">Congratulations!</string>
    <string name="results">Results</string>
    <string name="trophy">Trophy</string>
</resources>