<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalResultPage"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/results"/>

    <ImageView
        android:layout_width="475dp"
        android:layout_height="428dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/trophy"
        android:src="@drawable/trophy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text = "username"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        tools:text = "Your score is 9 out of 10"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:minHeight="80dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/finish" />

</LinearLayout>